--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:15432/vendas
+spring.datasource.url=https://api-spring-vendas.herokuapp.com/
 spring.datasource.username=postgres
 spring.datasource.password=123
 
