--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
-
-spring.datasource.hikari.connectionTimeout=20000
-spring.datasource.hikari.maximumPoolSize=5
-
-## PostgreSQL
-spring.datasource.url=https://api-spring-vendas.herokuapp.com/
-spring.datasource.username=postgres
+# data source
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:apivendasdb
+spring.datasource.username=sa
 spring.datasource.password=123
 
-#drop n create table again, good for testing, comment this in production
+# jpa
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+# h2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.jpa.defer-datasource-initialization=true
